# CombMath

./: .gitignore  Hungarian.js  README.md
1 lab/: main.cpp
1 lab/Lab1/: Lab1.sln
1 lab/Lab1/Lab 1/: CalculateOptimalRoute.cpp  CalculateOptimalRoute.h  Lab 1.cpp  Lab 1.vcxproj  Lab 1.vcxproj.filters
1 lab/Lab1Test/: Lab1Test.sln
1 lab/Lab1Test/Lab1Test/: Lab1Test.cpp  Lab1Test.vcxproj  Lab1Test.vcxproj.filters
1 lab/Lab1_2/: Lab1_2.sln
1 lab/Lab1_2/Lab1_2/: Lab1_2.cpp  Lab1_2.vcxproj  Lab1_2.vcxproj.filters  SelectItemsWithMaxCost.cpp  SelectItemsWithMaxCost.h
1 lab/Lab1_2Tests/: Lab1_2Tests.sln
1 lab/Lab1_2Tests/Lab1_2Tests/: Lab1_2Tests.cpp  Lab1_2Tests.vcxproj  Lab1_2Tests.vcxproj.filters
2 lab/Lab2_3/: Lab2_3.sln
2 lab/Lab2_3/Lab2_3/: FindTheHamiltonianCycle.cpp  (+4 more)
3 lab/: CMakeLists.txt  input.txt  main.cpp
3 lab/sas/: CGraph.cpp  CGraph.h
3 lab/src/: CGammaAlgorithm.cpp  CGammaAlgorithm.h  CGraph.cpp  CGraph.h  CMakeLists.txt
3 lab/srr/Edge/: CEdge.cpp  CEdge.h
3 lab/srr/Face/: CFace.cpp  CFace.h
3 lab/srr/GammaAlgorithm/: CGammaAlgorithm.cpp  CGammaAlgorithm.h
3 lab/srr/Graph/: CGraph.cpp  CGraph.h
3 lab/srr/Segment/: CSegment.cpp  CSegment.h
3 lab/srr/Vertex/: CVertex.cpp  CVertex.h
3 lab/test/: CMakeLists.txt  GammaTests.cpp
4 lab/: CMakeLists.txt  main.cpp
4 lab/src/: CMakeLists.txt  Graph.cpp  Graph.h
4 lab/test/: CMakeLists.txt  CountSpanningTreesTest.cpp
6 lab/: CMakeLists.txt  main.cpp
6 lab/src/: HungarianAlgorithm.cpp  HungarianAlgorithm.h  Vector.h  Vertex.h
6 lab/test/: HungarianAlgorithmTests.cpp
(+3 files in other folders)
